# auditpol

./: README.md  pyproject.toml
.github/workflows/: build.yml  publish.yml
auditpol/: __init__.py  policy.py  settings.py  subcategories.py
tests/: test_policy.py  test_settings.py  test_subcategories.py  test_utils.py
